# ssimilarity

./: CMakeLists.txt  README.md
src/: Charwise.hpp  Levenshtein.hpp  MatchFinder.hpp  StringsSimilarityCalculator.hpp  common.hpp
test/: CMakeLists.txt  main.cpp  similarity_functions.cpp
